--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,8 @@
       <div class="mb-8">
         <div class="relative max-w-2xl mx-auto">
           <textarea id="task-input" placeholder="What would you like me to work on?" rows="1"
-            class="w-full px-4 py-4 pr-12 text-lg border border-gray-300 rounded-lg shadow-sm focus:outline-none focus:ring-2 focus:ring-gray-400 focus:border-gray-400 resize-none overflow-hidden"></textarea>
+            class="w-full px-4 py-4 pr-12 text-lg border border-gray-300 rounded-lg shadow-sm focus:outline-none focus:ring-2 focus:ring-gray-400 focus:border-gray-400 resize-none min-h-[3.5rem] max-h-[12rem]"
+            style="field-sizing: content;"></textarea>
           <button id="submit-task"
             class="absolute right-2 top-1/2 transform -translate-y-1/2 p-2 text-gray-400 hover:text-gray-600 focus:outline-none border border-gray-300 rounded-lg hover:border-gray-400 transition-all duration-200"
             style="margin-top: -0.25rem">
