--- a/public/task-detail.html
+++ b/public/task-detail.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Task Detail - Intern</title>
+  <title>Task Detail - Duckling</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="/css/base.css">
 </head>
@@ -15,7 +15,7 @@
         <div class="flex justify-between h-16">
           <div class="flex items-center">
             <a href="index.html" class="flex items-center">
-              <img src="/assets/intern.png" alt="Intern" class="h-8 w-auto">
+              <img src="/assets/logo.png" alt="Duckling" class="h-12 w-auto">
             </a>
           </div>
           <div class="flex items-center">
@@ -41,6 +41,7 @@
     </div>
   </div>
 
+  <script src="/js/utils.js"></script>
   <script src="/js/task-detail.js"></script>
 </body>
 </html>
