--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Intern</title>
+  <title>Duckling</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="/css/base.css">
 </head>
@@ -17,7 +17,7 @@
         <div class="flex justify-between h-16">
           <div class="flex items-center">
             <a href="index.html" class="flex items-center">
-              <img src="/assets/intern.png" alt="Intern" class="h-8 w-auto">
+              <img src="/assets/logo.png" alt="Duckling" class="h-12 w-auto">
             </a>
           </div>
           <div class="flex items-center">
@@ -71,6 +71,7 @@
     </div>
   </div>
 
+  <script src="/js/utils.js"></script>
   <script src="/js/dashboard.js"></script>
 </body>
 
