favicon and defaults

--- a/public/settings.html
+++ b/public/settings.html
@@ -5,6 +5,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Settings - Duckling</title>
+  <link rel="icon" type="image/x-icon" href="/assets/favicon.ico">
+  <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon-16x16.png">
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="/css/base.css">
 </head>
@@ -144,7 +147,7 @@
             </div>
             <div>
               <label for="commit-suffix" class="block text-sm font-medium text-gray-700">Commit Suffix</label>
-              <input type="text" id="commit-suffix" name="commitSuffix" value=" [i]"
+              <input type="text" id="commit-suffix" name="commitSuffix" value=" [quack]"
                 class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-gray-400 focus:border-gray-400">
               <p class="text-xs text-gray-500 mt-1">Suffix added to all commit messages to identify Duckling-created
                 commits</p>
