--- a/public/index.html
+++ b/public/index.html
@@ -46,17 +46,44 @@
     <div class="max-w-4xl mx-auto px-4 sm:px-6 lg:px-8 py-8">
       <!-- Task Input -->
       <div class="mb-8">
-        <div class="relative max-w-2xl mx-auto">
-          <textarea id="task-input" placeholder="What would you like me to work on?" rows="1"
-            class="w-full px-4 py-4 pr-12 text-lg border border-gray-300 rounded-lg shadow-sm focus:outline-none focus:ring-2 focus:ring-gray-400 focus:border-gray-400 resize-none min-h-[3.5rem] max-h-[12rem]"
-            style="field-sizing: content;"></textarea>
-          <button id="submit-task"
-            class="absolute right-2 top-1/2 transform -translate-y-1/2 p-2 text-gray-400 hover:text-gray-600 focus:outline-none border border-gray-300 rounded-lg hover:border-gray-400 transition-all duration-200"
-            style="margin-top: -0.25rem">
-            <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 8l4 4m0 0l-4 4m4-4H3"></path>
-            </svg>
-          </button>
+        <div class="max-w-2xl mx-auto space-y-4">
+          <!-- Repository Selection -->
+          <div id="repository-selection" class="hidden">
+            <label for="repository-select" class="block text-sm font-medium text-gray-700 mb-2">Repository</label>
+            <select id="repository-select" 
+              class="w-full px-3 py-2 border border-gray-300 rounded-lg shadow-sm focus:outline-none focus:ring-2 focus:ring-gray-400 focus:border-gray-400">
+              <option value="">Select a repository...</option>
+            </select>
+          </div>
+
+          <!-- No repositories warning -->
+          <div id="no-repos-task-warning" class="hidden p-4 bg-amber-50 border border-amber-200 rounded-lg">
+            <div class="flex">
+              <div class="flex-shrink-0">
+                <svg class="h-5 w-5 text-amber-400" fill="currentColor" viewBox="0 0 20 20">
+                  <path fill-rule="evenodd" d="M8.257 3.099c.765-1.36 2.722-1.36 3.486 0l5.58 9.92c.75 1.334-.213 2.98-1.742 2.98H4.42c-1.53 0-2.493-1.646-1.743-2.98l5.58-9.92zM11 13a1 1 0 11-2 0 1 1 0 012 0zm-1-8a1 1 0 00-1 1v3a1 1 0 002 0V6a1 1 0 00-1-1z" clip-rule="evenodd"></path>
+                </svg>
+              </div>
+              <div class="ml-3">
+                <h3 class="text-sm font-medium text-amber-800">No repositories configured</h3>
+                <p class="text-sm text-amber-700 mt-1">You need to <a href="settings.html" class="underline">add repositories</a> before creating tasks.</p>
+              </div>
+            </div>
+          </div>
+
+          <!-- Task Input -->
+          <div class="relative">
+            <textarea id="task-input" placeholder="What would you like me to work on?" rows="1"
+              class="w-full px-4 py-4 pr-12 text-lg border border-gray-300 rounded-lg shadow-sm focus:outline-none focus:ring-2 focus:ring-gray-400 focus:border-gray-400 resize-none min-h-[3.5rem] max-h-[12rem]"
+              style="field-sizing: content;"></textarea>
+            <button id="submit-task"
+              class="absolute right-2 top-1/2 transform -translate-y-1/2 p-2 text-gray-400 hover:text-gray-600 focus:outline-none border border-gray-300 rounded-lg hover:border-gray-400 transition-all duration-200 disabled:opacity-50 disabled:cursor-not-allowed"
+              style="margin-top: -0.25rem" disabled>
+              <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 8l4 4m0 0l-4 4m4-4H3"></path>
+              </svg>
+            </button>
+          </div>
         </div>
       </div>
 
