--- a/public/task-detail.html
+++ b/public/task-detail.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Task Detail - Duckling</title>
+  <title>Duckling - Task Detail</title>
   <link rel="icon" type="image/png" href="/assets/favicon-256x256.png">
   <link rel="icon" type="image/png" sizes="512x512" href="/assets/favicon-512x512.png">
   <link rel="icon" type="image/png" sizes="256x256" href="/assets/favicon-256x256.png">
